--- a/pbl/pom.xml
+++ b/pbl/pom.xml
@@ -33,6 +33,12 @@
     <artifactId>mybatis</artifactId>
     <version>3.5.16</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
+<dependency>
+    <groupId>net.coobird</groupId>
+    <artifactId>thumbnailator</artifactId>
+    <version>0.4.20</version>
+</dependency>
 <!-- https://mvnrepository.com/artifact/org.bgee.log4jdbc-log4j2/log4jdbc-log4j2-jdbc4.1 -->
 <dependency>
     <groupId>org.bgee.log4jdbc-log4j2</groupId>
